updated hero image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section id="home" class="hero">
             <div class="profile-photo-wrapper">
-                <img src="/home/dsendros/Downloads/1600121948477.jpeg" alt="Dennis" class="profile-photo">
+                <img src="hero-image.jpeg" alt="Dennis" class="profile-photo">
                 <svg class="hexagon-frame" viewBox="-2 -2 189 174" fill="none">
                     <path class="hex-path" d="M92.5 0 L138.75 0 L185 85 L138.75 170 L92.5 170"/>
                     <path class="hex-path" d="M92.5 170 L46.25 170 L0 85 L46.25 0 L92.5 0"/>
