Minor fixes to project 2

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 <a href="projects/india-learning/index.html" class="project-card">
                     <h3>Indian States Quiz</h3>
-                    <p>An interactive quiz game to learn India's states, capitals, and regions.</p>
+                    <p>Interactive quiz games to learn India's states, capitals, and regions.</p>
                 </a>
 
                 <a href="projects/mixtiles-planner/index.html" class="project-card">
