Added contact email

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section id="contact" class="contact">
             <h2>Get In Touch</h2>
             <p>Feel free to reach out for collaborations or just a friendly chat.</p>
-            <a href="mailto:your.email@example.com" class="email-link">your.email@example.com</a>
+            <a href="mailto:dennis@sendros.build" class="email-link">Email me</a>
         </section>
     </main>
 
