--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <section id="projects" class="projects">
             <h2>Projects</h2>
             <div class="project-grid">
-                <a href="#" class="project-card">
-                    <h3>Project One</h3>
-                    <p>A short description of your first project and what technologies you used.</p>
+                <a href="projects/cocktological-evenings/index.html" class="project-card">
+                    <h3>Cocktological Evenings</h3>
+                    <p>Themed cocktail evenings I hosted until 2019—three drinks, a presentation, and six guests per night.</p>
                 </a>
 
                 <a href="projects/india-learning/index.html" class="project-card">
@@ -56,6 +56,11 @@
                 <a href="projects/mixtiles-planner/index.html" class="project-card">
                     <h3>Mixtiles Planner</h3>
                     <p>An interactive drag-and-drop tool for planning gallery wall layouts using Mixtiles photo tiles.</p>
+                </a>
+
+                <a href="projects/zoning-dashboard/index.html" class="project-card">
+                    <h3>DC Zoning Dashboard</h3>
+                    <p>Track DC Zoning Commission, BZA, and Design Review cases with real-time data from DC GIS.</p>
                 </a>
             </div>
         </section>
