Minor aesthetic changes

--- a/projects/zoning-dashboard/index.html
+++ b/projects/zoning-dashboard/index.html
@@ -25,7 +25,7 @@
         <div class="dashboard-header">
             <div class="dashboard-title">
                 <h1>DC Zoning Dashboard</h1>
-                <p>Track ZC, BZA, and Design Review cases</p>
+                <p>Track ZC and BZA cases</p>
             </div>
             <div class="dashboard-controls">
                 <div class="view-toggle">
@@ -86,9 +86,6 @@
             <span class="results-count">Loading cases...</span>
             <div class="active-filters" id="active-filters"></div>
         </div>
-
-        <!-- Calendar Status -->
-        <div class="calendar-status hidden" id="calendar-status"></div>
 
         <!-- Table View -->
         <div class="table-container" id="table-view">
